# dakota_driver

./: MANIFEST.in  README.txt  setup.cfg  setup.py
docs/: conf.py  index.rst  pkgdocs.rst  srcdocs.rst  usage.rst
src/dakota_driver/: __init__.py  driver.py
src/dakota_driver/test/: test_driver.py
