[metadata]
name = dakota_driver
version = 0.1
summary = 'OpenMDAO drivers using DAKOTA (Design Analysis Kit for Optimization and Terascale Applications)'
description-file = README.txt
keywords = openmdao
home-page = https://github.com/OpenMDAO-Plugins/dakota_driver
download-url = 
author = 
author-email = 
maintainer = 
maintainer-email = 
license = Apache License, Version 2.0
classifier = Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
requires-dist = openmdao.main
	pyDAKOTA
provides-dist = 
obsoletes-dist = 
requires-python = 
	>=2.6
	<3.0
requires-externals = 
project-url = 

[openmdao]
copyright = 
static_path = [ '_static' ]

